--- a/index.html
+++ b/index.html
@@ -32,5 +32,5 @@
 
 <div id='emojiLua'>
 </div>
-<script src='main.js.lua' type='module' charset='utf-8'></script>
+<script src='main.js' type='module' charset='utf-8'></script>
 <div id='lua-vm-container' class='entry'></div>
